[package]
name = "wave_test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "^1.0.68"
bytemuck = { version = "^1.12.3", features = ["derive"] }
image = { version = "^0.24.5", default-features = false, features = ["png"] }
parking_lot = "^0.12.1"
tokio = { version = "^1.23.0", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "^0.1.37"
tracing-subscriber = "^0.3.16"
wgpu = "^0.14.2"
